# Cc

./: .gitignore  CMakeLists.txt  README.md  build.sh  build.yml  calibre_protocol.cpp  calibre_protocol.h  configure.sh  main.cpp  network.cpp  toolchain.cmake
.github/workflows/: build.yml
src/: book_manager.cpp  book_manager.h  cache_manager.cpp  cache_manager.h  calibre_protocol.cpp  calibre_protocol.h  i18n.cpp  i18n.h  main.cpp  network.cpp
